--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -105,7 +105,7 @@
     "dateTo": "bis {{date}}",
     "choose": "Wähle deine Termine aus!",
     "change": "Ändere deine Termine!",
-    "delete": "Lösche das Datum",
+    "delete": "Lösche die Termineingabe",
     "enter": "Termineingabe",
     "start": "Startdatum",
     "add": "Weiteres Datum hinzufügen",
