--- a/src/locales/de-DE-sie.json
+++ b/src/locales/de-DE-sie.json
@@ -105,7 +105,7 @@
     "dateTo": "bis {{date}}",
     "choose": "Wählen Sie Ihre Termine aus!",
     "change": "Ändern Sie Ihre Termine!",
-    "delete": "Löschen Sie das Datum",
+    "delete": "Löschen Sie die Termineingabe",
     "enter": "Termineingabe",
     "start": "Startdatum",
     "add": "Weiteres Datum hinzufügen",
