fix: change locale key unknown to undefined

--- a/src/locales/de-DE-du.json
+++ b/src/locales/de-DE-du.json
@@ -98,8 +98,7 @@
     "accepted": "zugesagt",
     "questionable": "vorbehaltlich",
     "declined": "abgelehnt",
-    "undefined": "unbekannt",
-    "unknown": "unbekannt"
+    "undefined": "unbekannt"
   },
   "date": {
     "date": "Termin",
