--- a/src/locales/en-EN.json
+++ b/src/locales/en-EN.json
@@ -98,8 +98,7 @@
     "accepted": "accepted",
     "questionable": "questionable",
     "declined": "declined",
-    "undefined": "undefined",
-    "unknown": "unknown"
+    "undefined": "unknown"
   },
   "date": {
     "date": "Date",
