--- a/src/locales/platt.json
+++ b/src/locales/platt.json
@@ -86,8 +86,7 @@
     "accepted": ".",
     "questionable": ".",
     "declined": ".",
-    "undefined": ".",
-    "unknown": "."
+    "undefined": "."
   },
   "date": {
     "date": "Termin",
